fix: bug do request, agora todas as paginas, html, css, js e imagem aparecem com GET feat: response builder feat: content.html, a pagina para fazermos upload e deletar arquivos
Co-authored-by: Renan Batista <rbatista@resutec.com.br>

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -260,8 +260,8 @@ a:focus {
 .slider_section .detail-box a {
   display: inline-block;
   padding: 10px 55px;
-  background-color: #ffffff;
-  border: 1px solid #ffffff;
+  background-color: #fdb73c;
+  border: 1px solid #fdb73c;
   color: #000000;
   border-radius: 20px 20px 0 20px;
   margin-top: 35px;
